--- a/blocks/gallary/__image/gallary__image.css
+++ b/blocks/gallary/__image/gallary__image.css
@@ -1,6 +1,8 @@
 .gallary__image{
   max-width: 282px;
+  min-width: 282px;
   max-height: 282px;
+  min-height: 282px;
   border-radius: 10px 10px 0px 0px;
   margin-bottom: 25px;
 }
