--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,10 @@
 .profile__name {
+  min-width: 188.250px;
+  max-width: 188.250px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  /* сверху мои приколы */
   margin: 0;
   /* display: inline-block; */
   padding-bottom: 14px;
@@ -14,5 +20,6 @@
     font-size: 42px;
     line-height: 48px;
     text-align: start;
+    max-width: 292.828px;
   }
 }
