--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,21 +1,30 @@
 .popup__submit {
   color: white;
-  margin-bottom:25px;
+  margin-bottom: 25px;
   padding: 0;
   border: none;
   width: 238px;
   height: 46px;
   background: #000000;
   border-radius: 2px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #FFFFFF;
 }
-.popup__submit:hover{
+
+.popup__submit:hover {
+  cursor: pointer;
   opacity: 0.8;
 }
+
 @media screen and (min-width: 619px) {
-
-
   .popup__submit {
     min-width: 358px;
     max-height: 50px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
