--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,13 @@
-.header{
+.header {
   width: auto;
   margin-top: 28px;
   margin-bottom: 42px;
   min-height: 56px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
+
 @media screen and (min-width:880px) {
-  .header{
+  .header {
     margin: 45px auto 40px auto;
   }
 }
