--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,19 +1,20 @@
-.page{
+.page {
   margin: auto;
   max-width: 320px;
   background-color: #000000;
   /* Шрифты */
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', ‘Arial’, sans-serif;
   color: white;
 }
-@media screen and (min-width: 321px){
-  .page{
+
+@media screen and (min-width: 321px) {
+  .page {
     max-width: 690px;
   }
 }
 
 @media screen and (min-width: 880px) {
-  .page{
+  .page {
     max-width: 880px;
   }
 }
