--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,20 +1,23 @@
-.popup__job {
+.popup__input {
   padding: 0;
   margin: 0;
   margin-bottom: 58px;
   border: none;
   min-width: 100%;
-  max-height: 14px;
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #000000;
 }
+
+.popup__input:last-child {
+  margin-bottom: 43px;
+}
+
 @media screen and (min-width: 619px) {
-  .popup__job {
+  .popup__job:first-child {
     margin-bottom: 61px;
   }
 }
