--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,25 +1,19 @@
 .popup__title {
   margin: 25px 22px 75px 22px;
-
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
   /* identical to box height */
-
-
   color: #000000;
 }
+
 @media screen and (min-width: 619px) {
-
-
   .popup__title {
     margin: 34px 64px 54px 36px;
     text-align: start;
-
     /* text */
-    font-weight: 900;
     font-size: 24px;
     line-height: 29px;
   }
