--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+  padding-left: 28px;
   min-width: 188.250px;
   max-width: 188.250px;
   text-overflow: ellipsis;
@@ -7,7 +8,7 @@
   /* сверху мои приколы */
   margin: 0;
   /* display: inline-block; */
-  padding-bottom: 14px;
+  padding-bottom: 7px;
   /* шрифт */
   font-style: normal;
   font-weight: 500;
@@ -15,8 +16,10 @@
   line-height: 33px;
   color: #FFFFFF;
 }
+
 @media screen and (min-width:880px) {
   .profile__name {
+    padding-left: 0;
     font-size: 42px;
     line-height: 48px;
     text-align: start;
