--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,13 +1,14 @@
-.profile{
+.profile {
   justify-content: center;
   display: block;
   flex-wrap: wrap;
   text-align: center;
   margin-bottom: 36px;
+  align-items: center;
 }
 
 @media screen and (min-width:880px) {
-  .profile{
+  .profile {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 51px;
