--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,6 +5,7 @@
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
+  text-align: start;
   /* identical to box height */
   color: #000000;
 }
