--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 282px;
-  /* max-height: 322px; */
+  min-height: 322px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -14,5 +14,6 @@
   .popup__container {
     min-width: 430px;
     max-width: 330px;
+    min-height: 330px;
   }
 }
