--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
   padding: 0;
   margin: 0;
-  margin-bottom: 58px;
+  margin-bottom: calc(43px - 13px);
   border: none;
   min-width: 100%;
   font-family: 'Inter', ‘Arial’, sans-serif;
@@ -10,14 +10,16 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  padding-bottom: 12px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.popup__input:last-child {
-  margin-bottom: 43px;
+.popup__input:nth-of-type(2) {
+  margin-bottom: calc(58px - 13px);
 }
 
 @media screen and (min-width: 619px) {
-  .popup__job:first-child {
-    margin-bottom: 61px;
+  .popup__input:nth-of-type(2) {
+    margin-bottom: calc(61px - 13px);
   }
 }
