--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -22,8 +22,9 @@
 
 @media screen and (min-width: 619px) {
   .popup__submit {
+    margin-bottom: 37px;
     min-width: 358px;
-    max-height: 50px;
+    min-height: 50px;
     font-size: 18px;
     line-height: 22px;
   }
