--- a/blocks/gallary/__figure/gallary__figure.css
+++ b/blocks/gallary/__figure/gallary__figure.css
@@ -2,7 +2,7 @@
   background-position: bottom left;
   background-color: white;
   width: 282px;
-  min-height: 361px;
+  height: 100%;
   border-radius: 10px;
   margin: 0;
   padding: 0;
