--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -15,7 +15,7 @@
 }
 
 .popup__input:nth-of-type(2) {
-  margin-bottom: calc(58px - 13px);
+  margin-bottom: 37px;
 }
 
 @media screen and (min-width: 619px) {
