--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
   margin: auto;
   justify-content: center;
   align-items: center;
-  width: 282px;
+  min-width: 282px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -12,6 +12,6 @@
 @media screen and (min-width: 619px) {
   .popup__container {
     min-width: 430px;
-    max-width: 330px;
+    /* max-width: 330px; */
   }
 }
