--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,9 @@
 .popup {
-  display: none;
+  z-index: 1;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
   position: fixed;
   top: 0;
   left: 0;
