--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,8 @@
 @import url(../blocks/gallary/__figcaption/gallary__figcaption.css);
 @import url(../blocks/gallary/__figcaption-title/gallary__figcaption-title.css);
 @import url(../blocks/gallary/__like/gallary__like.css);
+@import url(../blocks/gallary/__like/_active/gallary__like_active.css);
+@import url(../blocks/gallary/__trash/gallary__trash.css);
 
 /* footer */
 @import url(../blocks/footer/footer.css);
